Bug 434429 - Manage Cache Data
Summary: Manage Cache Data
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.3
Platform: Mint (Debian based) Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-15 10:05 UTC by Sergey
Modified: 2021-04-04 15:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey 2021-03-15 10:05:33 UTC
SUMMARY
Manage Cashe Data not workin.
Nothing is removed, including "qmlcache" 
This problem in all versions, including 20.12.3A

SOFTWARE/OS VERSIONS
Linux Mint 18.3 Sylvia x86_64
Kernel: 4.15.0-39-generic  DE: XFCE
KDE Frameworks 5
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Julius Künzel 2021-04-04 10:04:58 UTC
Thanks for your report! I think I was able to reproduce.
Comment 2 Julius Künzel 2021-04-04 15:00:22 UTC
Git commit a2004f7b9001e6622d7ed4268aef45721d424e6a by Julius Künzel.
Committed on 04/04/2021 at 15:00.
Pushed by jlskuz into branch 'release/21.04'.

Fix broken cache deletion

M  +11   -16   src/project/dialogs/temporarydata.cpp
M  +1    -0    src/project/dialogs/temporarydata.h

https://invent.kde.org/multimedia/kdenlive/commit/a2004f7b9001e6622d7ed4268aef45721d424e6a