Fix broken cache deletion

BUG: 434429